# linktree-test

./: .pre-commit-config.yaml  Dockerfile  README.md  app.sh  db.sqlite3  docker-compose.yml  entrypoint.sh  manage.py  pylintrc  pyproject.toml
auth/: __init__.py  apps.py  models.py  views.py
auth_demo/: admin.py  apps.py  authentication.py  factories.py  models.py  permissions.py  serialisers.py  tests.py  urls.py  views.py
auth_demo/fixtures/: users_fixture.yaml
auth_demo/migrations/: 0001_initial.py  0002_user_parents.py  0003_auto_20220615_1958.py  0004_subscription_thirdpartyapp_thirdpartyappactionpermission.py  0005_rename_url_thirdpartyappactionpermission_url_name.py
linktreetest/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
